--- a/android-engineer.html
+++ b/android-engineer.html
@@ -106,7 +106,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Senior Android Mobile Engineer at allego.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/mojovision/71c937e4-eeef-4bd2-93f1-343ecdb5893e'>Mojo Vision - Sr. Android Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mojovision/71c937e4-eeef-4bd2-93f1-343ecdb5893e'>Mojo Vision - Sr. Android Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -138,7 +138,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/robinhood/jobs/1738108'>Job Application for Android Engineer (New Grad) at Robinhood</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/robinhood/jobs/1738108'>Job Application for Android Engineer (New Grad) at Robinhood</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -166,7 +166,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/oAezafwh'>Trek Bicycle Careers - Android Mobile Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/oAezafwh'>Trek Bicycle Careers - Android Mobile Software Engineer</a></h5> 
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -174,7 +174,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gloo/c53caeb2-afda-4089-9e5d-3ab3a584dd31'>Gloo - Senior Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/gloo/c53caeb2-afda-4089-9e5d-3ab3a584dd31'>Gloo - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -223,11 +223,11 @@ and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?..
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twitch/jobs/4346929002'>Job Application for Android Software Engineer, Extensions at Twitch</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4346929002'>Job Application for Android Software Engineer, Extensions at Twitch</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/258d7b4c-9d59-4a6e-be7b-82bd10468bea'>Houzz - Junior Android Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/houzz/258d7b4c-9d59-4a6e-be7b-82bd10468bea'>Houzz - Junior Android Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -261,7 +261,7 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/culturetrip/ba020909-1cfa-4c03-b8b5-d685e29bcf95'>Culture Trip - Android Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/culturetrip/ba020909-1cfa-4c03-b8b5-d685e29bcf95'>Culture Trip - Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -282,7 +282,7 @@ Engineer to level up our Apps Team in Costa Mesa! You'll be leading?...</p>
 <p><span class="badge badge-light">San Francisco, CA Mountain View, CA Seattle, WA</span></p>
 <p>Posted on: 2019-07-09</p>
 <hr/>
-<h5><a href='http://saavn.applytojob.com/apply/AetIdf3hBd/Android-Engineering-Manager'>Android Engineering Manager - Saavn - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://saavn.applytojob.com/apply/AetIdf3hBd/Android-Engineering-Manager'>Android Engineering Manager - Saavn - Career Page</a></h5> 
 <p><span class="badge badge-light">Mumbai New York California Mumbai Bangalore</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -303,7 +303,7 @@ Evangelist - Mobile Studio Manchester; Streamline Performance Tool Developer.</p
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/joyn/a2b661a3-4296-4289-9158-35fc27c42d5a'>Joyn GmbH - Senior Android Engineer - Player (m/f/d)</a></h5> 
+<h5><a href='https://jobs.lever.co/joyn/a2b661a3-4296-4289-9158-35fc27c42d5a'>Joyn GmbH - Senior Android Engineer - Player (m/f/d)</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -336,7 +336,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-03</p>
 <hr/>
-<h5><a href='https://codelitt-incubator.workable.com/jobs/1065844'>Android/iOS Engineer - Apply online - Codelitt Incubator - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://codelitt-incubator.workable.com/jobs/1065844'>Android/iOS Engineer - Apply online - Codelitt Incubator - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>23 hours ago ... Apply online for the job of Android/iOS Engineer at Codelitt Incubator.</p>
 <hr/>
@@ -404,7 +404,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999690406394-android-engineer'>Adevinta Android Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999690406394-android-engineer'>Adevinta Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-25</p>
 <hr/>
